--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Hello, world!</h1>
+        <h1>Hi babiii !</h1>
+        <br>
+        <h2>Ayaw patuyang ug work, pahulay kay naglain imong lawas</h2>
+        <h2>Just dropping by to say I LOVE YOUUU BABIII :)</h2>
     </body>
 </html>
